force-app/main/default/objects/CTRDueDiligenceTemplate__c.object
<CustomObject>
    <fields>
        <fullName>AnswerCode__c</fullName>
        <label>Answer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HidePosition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkToNEWS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link to NEWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>CTRDueDiligenceTemplate__c</referenceTo>
        <relationshipName>CTRDueDiligenceTemplate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportDeveloperName__c</fullName>
        <label>Report DeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportLink__c</fullName>
        <label>Report Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskLevel__c</fullName>
        <formula>IF( NOT(ISNULL(Level__c)) , &apos;Level &apos; + TEXT(Level__c) + &apos;: &apos;, &apos;&apos;) + CASE( Level__c , 1, &apos;Low Risk&apos;, 2, &apos;Medium Risk&apos;, 3, &apos;High Risk&apos;, 4, &apos;High-High Risk&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ValueEN__c</fullName>
        <label>Value EN</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ValueTH__c</fullName>
        <label>Value TH</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>CTR Due Diligence Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BusinessUnit__c</columns>
        <columns>RiskLevel__c</columns>
        <columns>ValueEN__c</columns>
        <columns>ValueTH__c</columns>
        <columns>AnswerCode__c</columns>
        <columns>ReportLink__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>